# Dissertation

./: .gitignore  agent.py  compare_greedy_evolved.py  create_graphs.py  debug_generator.py  evaluate_baselines.py  generate_win_chart.py  main.py  match.py  pyproject.toml  recreate_game.py  requirements.txt  train_ga.py  training_history.json
evolution/: __init__.py  agent.py  config-feedforward  evaluate_bot.py  match.py  pool_env.py  train_ppo.py  training_drills.py  training_oneball.py  watch_bot.py
planner/: __init__.py  aim_solver.py  defaults.json  evaluator.py  greedy_defaults.json  optimiser.py  optimiser_old.py  shot_generator.py  shot_planner.py  testing_evaluator.py  watch_bot.py
pool_simulation/: constants.py  main.py  play.py
pool_simulation/physics/: __init__.py  cushion_geom.txt  engine.py  event.py  path_visualizer.py  solvers.py  stronge_compliant.py
pool_simulation/physics/analysis/: benchmark_heatmap.py  benchmarker.py  cushion_rebounds.py  discrete-vs-continuous.py  path_visualizer.py  profiler.py
pool_simulation/physics/calibration/: annotate.py  calibrate_and_visualize.py  fix_distortion.py  rescue_data.py  shot1_data.json  shot3_data.json
pool_simulation/render/: __init__.py  pygame_renderer.py  testing_renderer.py
pool_simulation/tests/: dummy_sim.py  test_engine.py  test_render.py  test_shot_validation.py
