[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "english-pool-ai"
version = "0.1.0"
description = "A physics-based simulator and evolutionary AI for English 8-Ball Pool."
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24.0",
    "numba>=0.57.0",
    "pygame>=2.5.0",
    "scipy>=1.10.0",
    "opencv-python>=4.8.0",
    "pebble>=5.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pool_simulation*", "planner*"]